--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "devDependencies": {
     "eslint": "8.17.0",
-    "husky": "8.0.1",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-prettier": "7.2.0",
+    "eslint-plugin-prettier": "4.0.0",
     "jest": "28.1.0",
     "nodemon": "2.0.16",
     "prettier": "2.6.2",
