--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+gitignore
 node_modules
 .env
 firebase.json
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+aws-elastic-beanstalk-cli-setup
+Archive.zip
