refactor: Change esLint and prettier settings (#26)
* fix: Fix aws bug

* fix: Fix aws bug

* refactor: Change eslint and prettier settings

Wonhee Kang <eggfreitag@MacMorning.local>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 node_modules
 .env
 firebase.json
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+aws-elastic-beanstalk-cli-setup
+#Archive.zip by AWS
+Archive.zip
+#
+.husky
